===================
NDO Utils Changelog
===================

2.1.x - 2016-xx-xx
------------------
* /usr/lib/tmpfiles.d/ndo2db.conf should have 'd' type, not 'D' (John Frickson)


2.1.0 - 2016-08-01
------------------
* Probable fix for ndo2db not responding & growing queue issue (John Frickson)
* Got rid of uninitialized variable used for sleep() and increased the listen backlog (John Frickson)
* ndoutils clears all entries from SQL table causing slow startup (John Frickson)
* Clean up bad returns (John Frickson)
* Update nagios headers to (mostly) match the ones actually in core (John Frickson)
* cannot open /xxxx/ndo2db.lock for reading: No such file or directory (box293)
* Added option to specify alternative mysql TCP port on installdb script (JR Dalrymple)
* State History does not use actual plugin long_output
* Have the parent process wait until the lock file is written (David Michael)
* Accept a socket fd passed from systemd (David Michael)
* Cross-platform changes (John Frickson)
* Remove PostgreSQL support stub code (Eric Mislivec)
* db/upgrade: Fix a schema version typo (Eric Mislivec)
* Pad usecs to six digits when printing timevals (Eric Mislivec)
* Make the MySQL socket path a configurable option (Eric Mislivec)
* Patch situation where db table nagios_logentries has items where `instance_id`,`logentry_time`,`entry_time`,`entry_time_usec` isn't unique enough. - (Scott Wilkerson)
* Truncate all tables we should (Eric Mislivec)
* Free memory allocated for config options (Eric Mislivec)



2.0.0 - 02/28/2014
------------------
* Updated database schema upgrade script to support multiple updates (Eric Stanley, Scott Wilkerson)
* Added data serialization functions (Eric Stanley)
* Added new Nagios Core 4 attributes: importance values, service parents (Eric Stanley)
* Resolved tracker items #374 and #118 by adding auto-trimming options (Mike Guthrie)
* Replaced ndomod.cfg data_processing_options variable with single options (Mike Guthrie)