@@ -10,10 +10,10 @@ else
 fi
 
 # Current version number
-CURRENTVERSION=2.1.1-RC1
+CURRENTVERSION=2.1.1
 
 # Last date
-LASTDATE=08-31-2016
+LASTDATE=09-06-2016
 
 if [ "x$1" = "x" ]
 then
